Add List and RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="task_title_label">Title</string>
     <string name="task_details_label">Details</string>
     <string name="task_completed_label">Completed</string>
+    <string name="task_title">Task title</string>
+    <string name="task_date">Task Date</string>
 </resources>
