--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="task_completed_label">Completed</string>
     <string name="task_title">Task title</string>
     <string name="task_date">Task Date</string>
+    <string name="Image">Image</string>
 </resources>
